k8s/aspnetapp/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aspnetapp
  annotations:
    instrumentation.opentelemetry.io/inject-dotnet: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp
  namespace: aspnetapp
spec:
  selector:
    matchLabels:
      app: aspnetapp
  replicas: 1
  template:
    metadata:
      labels:
        app: aspnetapp
    spec:
      containers:
        - name: aspnetapp
          image: acradtr.azurecr.io/aspnetapp:latest
          imagePullPolicy: Always # IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
  namespace: aspnetapp
spec:
  selector:
    app: aspnetapp
  ports:
   - protocol: "TCP"
     port: 8080
     targetPort: 8080
  type: ClusterIP # LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp
  namespace: aspnetapp
  annotations:
    cert-manager.io/issuer: test-ca-issuer
    #kubernetes.io/ingress.class: nginx
spec:
  #tls:
  #  - hosts:
  #    - "aspnetapp.adtr"
  #    secretName: aspnetapp-tls
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "aspnetapp.adtr"
      http:
        paths:
        - path: "/"
          pathType: "Prefix"
          backend:
            service:
              name: "aspnetapp"
              port:
                number: 8080
